# SplineEditor

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: camera.h  main.cpp  renderer.cpp  renderer.h  shader_s.h  spline.cpp  spline.h
src/shaders/: shader.vs
